# py-ebrest

./: .gitignore  .tavis.yml  .travis.yml  Makefile  Taskfile.yaml  changelog.md  manifest.in  pylint.rc  pyproject.toml  readme.md  requirements.txt  setup.py  test.py
.github/workflows/: codestyle.yml  common.yml  lint.yml  publish.yml  static_type_checker.yml  tests.yml  tests_3.10.yml  tests_3.11.yml  tests_3.12.yml  tests_3.13.yml  tests_3.7.yml  tests_3.8.yml  tests_3.9.yml
easybill_rest/: __init__.py  helper.py
easybill_rest/resources/: resource_abstract.py  resource_attachments.py  resource_contacts.py  resource_customer_groups.py  resource_customers.py  resource_discount_position_groups.py  resource_discount_positions.py  resource_document_payments.py  resource_document_versions.py  resource_documents.py  resource_logins.py  resource_pdf_templates.py  resource_position_groups.py  resource_positions.py  resource_post_boxes.py  resource_projects.py  resource_sepa_payments.py  resource_serial_numbers.py  resource_stocks.py  resource_tasks.py  resource_text_templates.py  resource_time_trackings.py  resource_webhooks.py
easybill_rest/tests/: suite_unit.py  test_abstract_resource.py  test_attachments.py  test_case_abstract.py  test_client.py  test_contacts.py  test_customer_groups.py  test_customers.py  test_discount_position_groups.py  test_discount_positions.py  test_document_payments.py  test_document_versions.py  test_documents.py  test_helper.py  test_logins.py  test_pdf_templates.py  test_position_groups.py  test_positions.py  test_post_boxes.py  (+8 more)
